--- a/hotel_room_manager/src/main/resources/application.properties
+++ b/hotel_room_manager/src/main/resources/application.properties
@@ -1,6 +1,10 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/hotel10
+#spring.datasource.url=jdbc:mysql://localhost:3306/hotel10
+#spring.datasource.username=root
+#spring.datasource.password=root
+
+spring.datasource.url=jdbc:mysql://0.0.0.0:3307/hotel
 spring.datasource.username=user_1
-spring.datasource.password=123456789
+spring.datasource.password=12345
 
 server.servlet.context-path=/hotel
 
