change database on  postgresql

--- a/docker/dc.env
+++ b/docker/dc.env
@@ -1,9 +1,9 @@
-MYSQL_DATABASE=hotel
-MYSQL_USER=user_1
-MYSQL_PASSWORD=12345
-MYSQL_ROOT_PASSWORD=12345
+POSTGRES_DB=hotel
+POSTGRES_USER=user_1
+POSTGRES_PASSWORD=12345
 
 
-SPRING_DATASOURCE_URL=jdbc:mysql://db:3306/hotel
+
+SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/hotel
 spring_datasource_username=user_1
 spring_datasource_password=12345
