--- a/docker/docker-compose-postgre.yml
+++ b/docker/docker-compose-postgre.yml
@@ -21,21 +21,20 @@ services:
 
   # 2 - database
   db:
-    image: mysql:8.0
-    container_name: hotel-sql1
+    image: postgres:13.3
+    container_name: hotel-postgres1
     ports:
-      - "3308:3306"
+      - "5432:5432"
     restart: always
     env_file:
       - dc.env
     healthcheck:
-      test: [ "CMD", "mysqladmin", "ping", "-h", "localhost", '-u$MYSQL_USER', '-p$MYSQL_PASSWORD'  ]
-      timeout: 10s
-      retries: 10
-#    cap_add:
-#      - SYS_NICE  # CAP_SYS_NICE
+      test: ["CMD-SHELL", "pg_isready"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
     volumes:
-      - db:/var/lib/mysql
+      - db:/var/lib/postgres
     networks:
       - net
 
