--- a/hotel_database/src/main/resources/application.properties
+++ b/hotel_database/src/main/resources/application.properties
@@ -2,11 +2,12 @@
 #spring.datasource.username=root
 #spring.datasource.password=root
 
-spring.datasource.url=jdbc:mysql://localhost:3307/hotel
+#spring.datasource.url=jdbc:mysql://localhost:3307/hotel
+spring.datasource.url=jdbc:postgresql://localhost:5432/hotel
 spring.datasource.username=user_1
 spring.datasource.password=12345
 
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.liquibase.enabled=true
 spring.liquibase.change-log=classpath:db.changelog/db.changelog-master.yaml
