--- a/hotel_room_manager/build.gradle
+++ b/hotel_room_manager/build.gradle
@@ -27,7 +27,8 @@ dependencies {
     annotationProcessor ("org.projectlombok:lombok:${lombokVersion}")
     
     implementation ("org.springframework.boot:spring-boot-starter-data-jpa:${sbDataJPAVersion}")
-    runtimeOnly ("mysql:mysql-connector-java:${mySQLConnectorJavaVersion}")
+//    runtimeOnly ("mysql:mysql-connector-java:${mySQLConnectorJavaVersion}")
+    implementation group: 'org.postgresql', name: 'postgresql', version: '42.5.0'
     implementation ("org.liquibase:liquibase-core:${liquibaseCoreVersion}")
 
 
