--- a/hotel_room_manager/src/main/resources/application.properties
+++ b/hotel_room_manager/src/main/resources/application.properties
@@ -2,7 +2,8 @@
 #spring.datasource.username=root
 #spring.datasource.password=root
 
-spring.datasource.url=jdbc:mysql://0.0.0.0:3307/hotel
+#spring.datasource.url=jdbc:mysql://0.0.0.0:3307/hotel
+spring.datasource.url=jdbc:postgresql://localhost:5432/hotel
 spring.datasource.username=user_1
 spring.datasource.password=12345
 
