--- a/hotel_server/src/main/resources/application.properties
+++ b/hotel_server/src/main/resources/application.properties
@@ -3,7 +3,8 @@
 #spring.datasource.password=root
 
 
-spring.datasource.url=jdbc:mysql://localhost:3307/hotel
+#spring.datasource.url=jdbc:mysql://localhost:3307/hotel
+spring.datasource.url=jdbc:postgresql://localhost:5432/hotel
 spring.datasource.username=user_1
 spring.datasource.password=12345
 
