--- a/hotel_domain/build.gradle
+++ b/hotel_domain/build.gradle
@@ -17,7 +17,7 @@ repositories {
 }
 
 dependencies {
-
+    implementation ("org.springframework.boot:spring-boot-starter-data-jpa:${sbDataJPAVersion}")
     compileOnly 'org.springframework:spring-context:5.3.20'
     compileOnly 'javax.persistence:javax.persistence-api:2.2'
     compileOnly 'org.projectlombok:lombok:1.18.24'
