--- a/hotel_database/build.gradle
+++ b/hotel_database/build.gradle
@@ -36,6 +36,8 @@ dependencies {
 //  the Jupiter sub-project provides a TestEngine for running Jupiter based tests on the platform.
     runtimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
 
+    testImplementation group: 'com.h2database', name: 'h2', version: '2.1.214'
+
     implementation project(':hotel_commons')
     implementation project(':hotel_domain')
 }
