Issue_1: Добавлено в ReadMe описание запуска проекта, доработаны сборка и запуск приекта с сипользованием docker-compose

--- a/docker/docker-compose-db-postgres.yml
+++ b/docker/docker-compose-db-postgres.yml
@@ -7,15 +7,19 @@ services:
     ports:
       - "5432:5432"
     restart: always
-    environment:
-      - POSTGRES_DB=hotel
-      - POSTGRES_USER=user_1
-      - POSTGRES_PASSWORD=12345
+    env_file:
+      - dc.env
     volumes:
       - db:/var/lib/postgres
+#    networks:
+#      - net
 
 volumes:
   db:
+
+#networks:
+#  net:
+
 
 
 
