--- a/docker/docker-compose-withoutdb-postgres.yml
+++ b/docker/docker-compose-withoutdb-postgres.yml
@@ -11,33 +11,10 @@ services:
     ports:
       - "8080:8080"
     restart: always
-    depends_on:
-      db:
-        condition: service_healthy
     env_file:
       - dc.env
-    networks:
-      - net
-
-  # 2 - database
-  db:
-    image: mysql:8.0
-    container_name: hotel-sql1
-    ports:
-      - "3308:3306"
-    restart: always
-    env_file:
-      - dc.env
-    healthcheck:
-      test: [ "CMD", "mysqladmin", "ping", "-h", "localhost", '-u$MYSQL_USER', '-p$MYSQL_PASSWORD'  ]
-      timeout: 10s
-      retries: 10
-#    cap_add:
-#      - SYS_NICE  # CAP_SYS_NICE
-    volumes:
-      - db:/var/lib/mysql
-    networks:
-      - net
+#    networks:
+#      - net
 
   # 3 - frontend
   hotel-ui_service:
@@ -48,8 +25,9 @@ services:
     ports:
       - "8086:8086"
     restart: always
-    networks:
-      - net
+#    networks:
+#      - net
+
 
   # 4 - activeMQ
   activemq-service:
@@ -59,8 +37,8 @@ services:
       - "61616:61616"
       - "8161:8161"
     restart: always
-    networks:
-      - net
+#    networks:
+#      - net
 
   # 5 - activemq-configuration
   hotel-acivemq_service:
@@ -71,8 +49,8 @@ services:
     ports:
       - "9095:9095"
     restart: always
-    networks:
-      - net
+#    networks:
+#      - net
 
   # 6 - listener
   hotel-room_manager_service:
@@ -83,20 +61,17 @@ services:
     ports:
       - "8087:8087"
     restart: always
-    depends_on:
-      db:
-        condition: service_healthy
     env_file:
       - dc.env
-    networks:
-      - net
+#    networks:
+#      - net
 
 
 volumes:
   db:
 
-networks:
-  net:
+#networks:
+#  net:
 
 
 
