--- a/hotel_room_manager/src/main/resources/application.properties
+++ b/hotel_room_manager/src/main/resources/application.properties
@@ -1,8 +1,3 @@
-#spring.datasource.url=jdbc:mysql://localhost:3306/hotel10
-#spring.datasource.username=root
-#spring.datasource.password=root
-
-#spring.datasource.url=jdbc:mysql://0.0.0.0:3307/hotel
 spring.datasource.url=jdbc:postgresql://localhost:5432/hotel
 spring.datasource.username=root
 spring.datasource.password=12345
@@ -24,6 +19,11 @@ spring.liquibase.enabled=true
 spring.liquibase.change-log=classpath:db.changelog/db.changelog-master.yaml
 spring.liquibase.contexts=dev
 
-hotel.activemq.queueName=RoomQueue
-hotel.activemq.topicName=RoomTopic
-
+hotel.kafka.topicName=topic_hotel
+spring.kafka.consumer.bootstrap-servers=localhost:9092
+spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.consumer.group-id=group1
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+#spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
+spring.kafka.consumer.properties.spring.json.trusted.packages=*
