--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,5 @@
 rootProject.name = 'hotel_v1'
 
-include('hotel_activemq')
 include('hotel_dto')
 include('hotel_room_manager')
 include('hotel_server')
@@ -8,3 +7,4 @@ include('hotel_ui')
 include('hotel_commons')
 include('hotel_domain')
 include('hotel_database')
+include('hotel_kafka')
