--- a/docker/dc.env
+++ b/docker/dc.env
@@ -2,6 +2,9 @@ POSTGRES_DB=hotel
 POSTGRES_USER=root
 POSTGRES_PASSWORD=12345
 
-SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/hotel
+spring_datasource_url=jdbc:postgresql://db:5432/hotel
 spring_datasource_username=root
 spring_datasource_password=12345
+
+spring.kafka.consumer.bootstrap-servers=kafka:9092
+spring.kafka.consumer.bootstrap-servers=kafka:9092
